[project]
name = "m3georeferencer"
version = "0.1.2"
description = "Georeferencing GUI built for Moon Mineralogy Mapper data"
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>2.2)",
    "rasterio (>=1.4.3,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "arguably (>=1.3.0)",
    "PyQt6 (>6.9)"
]

[project.scripts]
m3georeferencer = "m3georeferencer.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
